--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>First Page</title>
+    <link rel="stylesheet" href="./src/style.css">
 </head>
 <body>
-This is a page. Has this worked?
+<h1>This will be my draft Planning Poker tool</h1>
 </body>
 </html>
