--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>First Page</title>
     <link rel="stylesheet" href="./src/style.css">
 </head>
+
 <body>
-<h1>This will be my draft Planning Poker tool</h1>
+    <h1>This will be my Planning Poker tool</h1>
+
+    <h1>External JavaScript</h1>
+
+    <p id="demo">A Paragraph.</p>
+
+    <button type="button" onclick="myFunction()">Try it</button>
+
+    <p><strong>Note:</strong> myFunction is stored in an external file called "myScript.js".</p>
+
+    <script src="./src/myScript.js"></script>
+
+    <h1>My First Web Page</h1>
+    <p>My first Paragraph</p>
+
+    <p id="demo1"></p>
+
+    <script>
+        document.getElementById("demo1").innerHTML = 5 + 6;
+
+    </script>
+
 </body>
+
 </html>
